# Messanger

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
model/: CMakeLists.txt  Chat.cpp  Chat.hpp  Contact.cpp  Contact.hpp  GeneralModel.cpp  GeneralModel.hpp
model/proxy_models/: ActiveChatProxyModel.cpp  ActiveChatProxyModel.hpp  ChatListProxyModel.cpp  ChatListProxyModel.hpp  ContactProxyModel.cpp  ContactProxyModel.hpp  GeneralProxyModel.cpp  GeneralProxyModel.hpp
tests/: CMakeLists.txt  TestBase.cpp  TestBase.hpp  testgui.cpp
tests/gui/: AddContact.cpp  AddContactAndStartNewChat.cpp  CMakeLists.txt  CheckConnectionToServer.cpp  CheckConnectionToServerWithInvalidData.cpp  ClickOnLeftDrawerButtons.cpp  DeleteChat.cpp  FetchContactsFromServer.cpp  InitialWidgetsStatus.cpp  InitialWidgetsVisibility.cpp  SelectExistingChat.cpp  SendNewMessageInExistingChat.cpp  StartNewChat.cpp  StartNewChatForExistingContact.cpp  TestGuiBase.cpp  TestGuiBase.hpp
tests/model/: CMakeLists.txt  TestChatListProxyModel.cpp  TestModelBase.cpp  TestModelBase.hpp
tests/xmpp_services/: CMakeLists.txt  HandleTwoRostersContacts.cpp
widgets/: ActiveChat.cpp  ActiveChat.hpp  AddContactWidget.cpp  AddContactWidget.hpp  ChatListWidget.cpp  ChatListWidget.hpp  ContactListWidget.cpp  ContactListWidget.hpp  LeftDrawer.cpp  LeftDrawer.hpp  MiddleStack.cpp  MiddleStack.hpp  SettingsWidget.cpp  SettingsWidget.hpp
xmpp_services/: CMakeLists.txt  XmppClient.cpp  XmppClient.hpp  XmppServer.cpp  XmppServer.hpp  XmppServerExtensionRosterHandler.cpp  XmppServerExtensionRosterHandler.hpp  main.cpp
